Created Prod scheme for Xcode, updated all icons and splash screens for both ios/droid, fixes for screen orientation locking, fix for Android splash, a few other small build fixes.

--- a/mobile/android/AtStake/app/src/main/res/layout/activity_web.xml
+++ b/mobile/android/AtStake/app/src/main/res/layout/activity_web.xml
@@ -21,40 +21,10 @@
         android:layout_alignParentTop="true"
         android:layout_margin="0dp"
         android:layout_marginBottom="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginEnd="0dp"
         android:padding="0dp"
         android:visibility="visible" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@+id/newGame"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="41dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/joinGame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/button"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:text="Join Game"
-            android:visibility="invisible" />
-
-        <Button
-            android:id="@+id/newGame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="188dp"
-            android:text="New Game"
-            android:visibility="invisible" />
-    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
