--- a/templates/partials/component/timer.hbs
+++ b/templates/partials/component/timer.hbs
@@ -56,10 +56,10 @@
           {{#ifeq stage 'doubledown'}}
             {{#if body_active}}<p>{{body_active}}<br><span>{{role}}</span></p>{{/if}}
           {{else}}
-            {{#if body}}<p>{{body}}<br><span>{{role}}</span></p>{{/if}}
+            {{#if body}}<p class="{{stage}}">{{body}}<br><span>{{role}}</span></p>{{/if}}
           {{/ifeq}}
         {{else}}
-            {{#if body}}<p>{{body}}<br><span>{{role}}</span></p>{{/if}}
+            {{#if body}}<p class="{{stage}}">{{body}}<br><span>{{role}}</span></p>{{/if}}
         {{/ifeq}}
 
   </div>
