--- a/templates/partials/shared/doubledown.hbs
+++ b/templates/partials/shared/doubledown.hbs
@@ -107,7 +107,7 @@
 		}}
 
 		{{> component/timer
-				stage=doubledown
+				stage='doubledown'
 				active_player=player.isActive 
 				body_active=activePlayer.username
 				role=activePlayer.role.title
