--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -49,7 +49,7 @@
   	{{#ifnoteq round 3}}
 
 		  <div class="form decider speech">
-		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Go to Next Round</button>
+		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Next!</button>
 			</div>
 			
 		{{else}}
