--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -807,6 +807,9 @@ input.post-button {
   .instruction {
   	font-family: AvenirNext-Medium;
 	  font-size: 12px;
+	  div {
+			font-size: 14px;
+		}
 	  span {
 	  	font-family: AvenirNext-Bold;
 	  }
@@ -953,6 +956,10 @@ input.post-button {
 	height: 72px;
 	margin-bottom: 4px;
 	font-family: AvenirNext;
+
+	div {
+		font-size: 14px;
+	}
 
 	h1 {
 		font-size: 16px;
