update vectors to avoid stretching

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -195,7 +195,7 @@
                     </div>
                     <div id="currency" class="col-sm-6 col-xs-6">
                         <div id="pot-coins"><p>coin pot</p>  <span></span></div>
-                        <div id="player-coins" style="background-image:{{{cloudinaryUrl 'v1486743650/at-stake/layout/coin_stroke.png' width=60}}}"><p>your coins</p>  <span></span></div>
+                        <div id="player-coins"><p>your coins</p>  <span></span></div>
                     </div>
                     
                 </footer>
