--- a/templates/partials/component/speech.hbs
+++ b/templates/partials/component/speech.hbs
@@ -12,7 +12,7 @@
 --}}
 <blockquote class="speech {{showHide this}} {{#ifeq decider true}}form{{/ifeq}}">
 
-  <p>"{{body}}"</p>
+  <p>{{body}}</p>
 
   {{#if secondary}}
 	  <div>{{secondary}}</div>
