--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -271,6 +271,9 @@ socketEvents = function(eventId, eventData) {
 
             $('#bottom-bar').show();
 
+            if (isDecider)
+                $('#btn-role-card').css('visibility', 'hidden');
+
             $('#role-card').html(roleCard).promise().done(function() {
 
                 $('#btn-close-role-card').on('click', function(evt) {
