--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -116,6 +116,7 @@ var setupScreen = function(screenName) {
 
     if(screenName === 'debrief') {
         $('#gameContent').removeClass('in-game');
+        $('#bottom-bar').hide();
     }
     else {
         $('#stages-bar').show();
