--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -67,10 +67,22 @@
 		
 		button {
 			bottom: 60px;
-			// &:before {
-			// 	bottom: 6px;
-		 //    left: 70px;
-			// }
+			right: 10px;
+		}
+
+		p {
+			line-height: 20px;
+		}
+
+	}
+
+	body.mobile blockquote.speech {
+
+		padding: 60px 20px;
+		
+		button {
+			bottom: 88px;
+			right:10px;
 		}
 
 		p {
