--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -121,8 +121,8 @@
                 <div class="disabled icon">{{{cloudinaryUrl 'v1492107684/at-stake/layout/meet-phase.svg' width=100 height=100}}}<span>meet</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/think-phase.svg' width=100 height=100}}}<span>think</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/pitch-phase.svg' width=100 height=100}}}<span>pitch</span></div>
-                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/delib-phase.svg' width=100 height=100}}}<span>deliberate</span></div>
-                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/dd-phase.svg' width=100 height=100}}}<span>double-down</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/delib-phase.svg' width=100 height=100}}}<span style="margin-left:-15px;">deliberate</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/dd-phase.svg' width=100 height=100}}}<span id="doubledown">double-down</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/score-phase.svg' width=100 height=100}}}<span>decide</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/score-phase.svg' width=100 height=100}}}<span>score</span></div>
             </section>
