decide copy edit

--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -183,7 +183,7 @@
 		{{> component/instructions 
 				decider=true
 				heading="Press next for Score phase"
-				body="Let players know the Decide phase is over by reading the text below.  When ready press next to continue."
+				body="Once you finish speaking the instructions to other players, press next to continue"
 		}}
 
 		{{> component/instructions 
