Fix for opening settings app on iOS 10, likely fix for issue #254.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -645,7 +645,7 @@
 
 				$('#overlay').on('opened', function(evt) {
 
-					$(evt.currentTarget).off('opened');
+					// $(evt.currentTarget).off('opened');
 
 					$('#overlay #btn-menu-back').click(function(evt) {
 						$('#overlay').trigger('hide');
