rules copy edit autocorrect removal - testing

--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -37,11 +37,11 @@
 
 	{{> component/speech 
 			decider=true
-			body="Each round reveals a specific question related to the game category. And asks players to pitch a potential solution or proposal for addressing."
+			body="Each round reveals a specific question and asks players to pitch a potential solution or proposal that helps solve the problem."
 	}}
 
 	{{> component/speech 
-			body="Each round reveals a specific question related to the game category. And asks players to pitch a potential solution or proposal for addressing."
+			body="Each round reveals a specific question and asks players to pitch a potential solution or proposal that helps solve the problem."
 	}}
 
 </div>
@@ -61,11 +61,11 @@
 
 	{{> component/speech 
 			decider=true
-			body="Players put themselves in the shoes of stakeholders impacted by these issues. And take turns pitching proposed solutions based on their stakeholder role."
+			body="Each player is assigned a stakeholder role. Player's put themselves in the shoes of these characters and think of proposals from their perspective."
 	}}
 
 	{{> component/speech 
-			body="Players put themselves in the shoes of stakeholders impacted by these issues. And take turns pitching proposed solutions based on their stakeholder role."
+			body="Each player is assigned a stakeholder role. Player's put themselves in the shoes of these characters and think of proposals from their perspective."
 
 	}}
 
@@ -86,11 +86,11 @@
 
 	{{> component/speech 
 			decider=true
-			body="As a stakeholder, your goal is to pitch the best proposal. And integrate hidden agenda items that are specific to your stakeholder role."
+			body="Your goal is to pitch a proposal that integrates your stakeholder's hidden agenda items and best addresses the question."
 	}}
 
 	{{> component/speech 
-			body="As a stakeholder, your goal is to pitch the best proposal. And integrate hidden agenda items that are specific to your stakeholder role."
+			body="Your goal is to pitch a proposal that integrates your stakeholder's hidden agenda items and best addresses the question."
 	}}
 
 </div>
@@ -134,11 +134,11 @@
 
 	{{> component/speech 
 			decider=true
-			body="Once a winner is selected, each player's  agenda items are revealed. And one by one the decider determines if the selected proposal includes item."
+			body="Stakeholders win all the coins in the pot if the decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
 	}}
 
 	{{> component/speech 
-			body="Once a winner is selected, each player's  agenda items are revealed. And one by one the decider determines if the selected proposal includes item."
+			body="Stakeholders win all the coins in the pot if the decider selects their proposal, and any stakeholder whose agenda items are in that proposal recieve bonus coins."
 	}}
 
 </div>
