--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -9,7 +9,7 @@
   <div class="lobby" id="name" class="col-sm-12">
     <div class="form col-xs-12 col-centered">
 
-      <input type="text" id="player-name" maxlength="10" placeholder="Type your name and hit next to begin" class="hidden-el"> <br />
+      <input autocomplete="off" autofill='off' autocorrect="off" autocapitalize="off" spellcheck="false" type="text" id="player-name" maxlength="10" placeholder="Type your name and hit next to begin" class="hidden-el"> <br />
       
       <div class="error">Error!</div>
       <input id="btn_submit_name" data-package='{"name": "#player-name"}' maxlength="10" class="btn btn-default submit_name hidden-el" type="submit" name="submit" value="Next!">
