Fix for issue of coins amounts not refreshing on player reconnect.

--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -312,6 +312,10 @@ socketEvents = function(eventId, eventData) {
                 });
             });
 
+            // Refresh coins UI
+            $('#pot-coins span').text(eventData.pot);
+            $('#player-coins span').text(eventData.coins);
+
             break;
 
         case 'player:lost':
