--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -77,7 +77,7 @@
 
                         </div>
                       
-                        <div id="message-disconnected" class="col-sm-8 col-centered error" style="display:none">
+                        <div id="message-disconnected" class="col-sm-8 col-centered error menu" style="display:none">
                           It looks like the game is not responding for some reason. Try reconnecting or playing later!
                         </div>
 
