--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -47,7 +47,7 @@ $(document).ready(function() {
 {{/ifnoteq}}
 
 // Tap away any errors
-$(document).on('click touchstart', 'div.error', function() {
+$(document).on('click touchstart', 'div.error:not(.menu)', function() {
     $(this).hide();
 });
 
